@@ -1,5 +1,7 @@
 **7.1.0 (unreleased)**
 
+* Allow constraining versions globally without having to know exactly what will
+  be installed by the pip command. :issue:`2731`.
 
 **7.0.3 (2015-06-01)**
 
